# flask-oauth2-server

./: .python-version  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
flaskr/: __init__.py
flaskr/config/: __init__.py  development.py  production.py  testing.py
flaskr/models/: __init__.py  client.py  grant.py  token.py  user.py
flaskr/oauth2/: ext.py  provider.py  validator.py
flaskr/routes/: main.py  oauth.py  utils.py
flaskr/templates/main/: index.html
flaskr/templates/oauth/: authorize.html
