[metadata]
name = Flask OAuth2 Server
version = 1.0.0
author = Shingo OKAWA
description = Flask OAuth2 Server Implementation for Learning Purpose.
long_description = file: README.md
license = MIT License

[options]
package = find:
install_requires =
    flask
    flask-sqlalchemy
    flask-migrate

[options.extra_requires]
test =
    pytest
    pytest-cov
