[metadata]
name = flaskr
version = 1.0.0
author = Shingo OKAWA
description = Flask OAuth2 Server Implementation for Learning Purpose.
long_description = file: README.md
license = MIT License

[options]
packages = find:
install_requires =
    flask
    flask-sqlalchemy
    flask-migrate

[options.extras_require]
test =
    pytest
    pytest-cov
